--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -129,9 +129,9 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(
-    to right,
-    rgba(0, 0, 0, 0.6) 20%,
-    rgba(0, 0, 0, 0.1) 60%,
+    to bottom,
+    rgba(1, 76, 12, 0.6) 20%,
+    rgba(1, 62, 5, 0.337) 60%,
     transparent 100%
   );
   z-index: 1;
