--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -338,24 +338,30 @@ main {
 }
 
 .card-title {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
-  height: calc(1.2em * 2);
-  min-height: calc(1.2em);
-  margin-top: 5px;
-  transition: color 0.3s ease;
+  font-size: 1.1rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  color: #000;
+  min-height: 48px;
 }
 
 .card-text {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin-bottom: 1rem;
   color: #666;
   line-height: 1.6;
-  overflow: visible;
-  text-overflow: ellipsis;
-  height: calc(1.2em * 2);
-  min-height: calc(1.2em * 2);
-  margin-top: 5px;
-  transition: color 0.3s ease;
+  min-height: 48px;
 }
 
 .activity-title {
@@ -782,7 +788,6 @@ main {
 .post-page-wrapper {
   padding-top: 160px;
   padding-bottom: 50px;
-
   color: #020202;
 }
 
@@ -826,7 +831,6 @@ main {
 /* Grid Post Styles */
 .post-card {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  overflow: hidden;
   background-color: #ffffff;
   border: 1px solid #dee2e6 !important;
 }
@@ -854,7 +858,7 @@ main {
   font-size: 1.25rem;
   font-weight: 600;
   margin-bottom: 0.5rem;
-  color: #212529;
+  color: #000000;
 }
 
 /*Post detail page styles*/
