--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -248,7 +248,7 @@ main {
 @keyframes fadeInUp {
   from {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(10px);
   }
 
   to {
@@ -315,8 +315,10 @@ main {
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding-top: 12px;
+  padding-bottom: 0px;
   opacity: 100;
-  transform: translateY(50px);
+  transform: translateY(10px);
   transition: all 0.6s ease;
   border-radius: 10px;
   overflow: hidden;
@@ -706,7 +708,7 @@ main {
 }
 
 .product-link:hover .product-card {
-  transform: translateY(-5px);
+  transform: translateY(-3px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12) !important;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
@@ -780,13 +782,13 @@ main {
 }
 
 .feature-card:hover {
-  transform: translateY(-10px);
+  transform: translateY(-5px);
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.12) !important;
 }
 
 /*POSTPAGE CSS*/
 .post-page-wrapper {
-  padding-top: 160px;
+  padding-top: 200px;
   padding-bottom: 50px;
   color: #020202;
 }
@@ -872,7 +874,7 @@ main {
 }
 
 .post-content {
-  font-size: 1rem;
+  font-size: 20px;
   line-height: 1.8;
   color: #000000;
 }
@@ -882,7 +884,7 @@ main {
 }
 
 .post-content img {
-  max-width: 80%;
+  max-width: 60%;
   height: auto;
   border-radius: 0.25rem;
   margin-top: 1rem;
