--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -136,7 +136,7 @@ main {
 .banner-slider {
   position: relative;
   width: 100%;
-  height: 800px;
+  height: 600px;
   overflow: hidden;
 }
 
@@ -146,10 +146,10 @@ main {
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 900px;
+  height: 600px;
   display: flex !important;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .gradient.dark {
@@ -332,7 +332,7 @@ main {
 }
 
 .card:hover {
-  transform: translateY(-10px);
+  transform: translateY(0);
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
 }
 
@@ -349,7 +349,7 @@ main {
   text-overflow: ellipsis;
   font-size: 1.1rem;
   font-weight: 600;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
   color: #000;
   min-height: 48px;
 }
@@ -375,6 +375,7 @@ main {
 .topic-card {
   display: flex;
   width: 100%;
+
   flex-direction: column;
   height: 100%;
 
@@ -867,7 +868,7 @@ main {
 /*Post detail page styles*/
 .post-detail-page-wrapper .user-details-page-wrapper {
   position: relative;
-  /* margin-top: 250px; */
+  margin-top: 250px;
   padding-bottom: 4rem;
   padding: 20px;
   color: #070707;
