--- a/front_end/src/App.css
+++ b/front_end/src/App.css
@@ -6,19 +6,21 @@
   --text-color-secondary: #6e6b66;
   --background-light: #ffffff;
   --background-dark: #414040;
-
   --font-primary: "Montserrat", sans-serif;
   --font-secondary: "Palatino Linotype", serif;
 }
 
 /* General Styles */
-h5 {
+h5,
+h6 {
   margin: 0;
   padding: 0;
   border: 0;
+  letter-spacing: 0.5px;
+}
+h5 {
   vertical-align: baseline;
   font-family: var(--font-primary);
-  letter-spacing: 0.5px;
   font-size: 20px;
   font-weight: bold;
   line-height: 24px;
@@ -26,14 +28,10 @@ h5 {
   text-transform: capitalize;
 }
 h6 {
-  margin: 0;
-  padding: 0;
-  border: 0;
   vertical-align: baseline;
-  letter-spacing: 0.5px;
   font-size: 14px;
   line-height: 24px;
-  font-family: "Palatino Linotype, serif";
+  font-family: "Palatino Linotype", serif;
   color: var(--text-color-secondary);
 }
 
@@ -138,18 +136,13 @@ h6 {
 }
 
 /*Cart icon */
-.header-and-menu-container .cart-icon {
-  filter: brightness(0) invert(1);
-  transition: filter 0.3s ease-in-out;
-}
+.header-and-menu-container .cart-icon,
 .header-and-menu-container .search-icon {
   filter: brightness(0) invert(1);
   transition: filter 0.3s ease-in-out;
 }
 
-.header-and-menu-container.scrolled .cart-icon {
-  filter: none;
-}
+.header-and-menu-container.scrolled .cart-icon,
 .header-and-menu-container.scrolled .search-icon {
   filter: none;
 }
@@ -373,7 +366,6 @@ main {
   flex-direction: column;
   padding-top: 0px;
   padding-bottom: 0px;
-  opacity: 100;
   transform: translateY(10px);
   transition: all 0.6s ease;
   border-radius: 10px;
@@ -395,6 +387,7 @@ main {
   transform: scale(1.1);
 }
 
+.card-text,
 .card-title {
   display: -webkit-box;
   -webkit-line-clamp: 2;
@@ -405,26 +398,14 @@ main {
   font-size: 1.1rem;
   font-weight: 600;
   margin-bottom: 0;
-  color: #000;
+  color: #646464;
   min-height: 48px;
-}
-
-.card-text {
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  margin-bottom: 1rem;
-  color: #666;
-  line-height: 1.6;
-  min-height: 48px;
+  font-family: var(--font-secondary);
 }
 
 .activity-title {
   font-weight: bold;
-  font-family: "Palatino Linotype, serif";
+  font-family: "Palatino Linotype", serif;
   color: var(--primary-color);
 }
 .topic-card {
@@ -558,7 +539,7 @@ main {
 }
 
 .detail-banner {
-  height: 60svh;
+  height: 500px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -741,8 +722,13 @@ main {
 /*Equipment Page*/
 /*Sidebar-filter*/
 .sidebar-filter {
-  padding-top: 160px;
+  padding-top: 125px;
   border-right: var(--text-color-light) 2px solid;
+  text-shadow: 2px 2px 8px #000;
+  font-size: 1.2rem;
+  background-color: #6666667c;
+  border-radius: 0 10px 10px 0;
+
   /* position: sticky;
   top: 90px;
   align-self: flex-start;
@@ -755,7 +741,7 @@ main {
   height: 200px;
   object-fit: contain;
   padding: 10px;
-  background-color: var(--text-color-light) fff;
+  background-color: var(--text-color-light);
 }
 
 .product-link {
@@ -863,7 +849,7 @@ main {
 
 /* Featured Post Styles */
 .featured-post-card {
-  background-color: var(--text-color-light) fff;
+  background-color: var(--text-color-light);
   border: 1px solid rgba(255, 255, 255, 0.1) !important;
   transition: box-shadow 0.3s ease-in-out;
   margin-top: 200px;
@@ -890,7 +876,7 @@ main {
 /* Grid Post Styles */
 .post-card {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  background-color: var(--text-color-light) fff;
+  background-color: var(--text-color-light);
   border: 1px solid #dee2e6 !important;
 }
 
@@ -1144,7 +1130,7 @@ main {
     left: 0;
     right: 0;
     z-index: 2000;
-    background-color: var(--text-color-light) fff;
+    background-color: var(--text-color-light);
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     border-top: 1px solid #eee;
